--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-png">
 </head>
 <body>
-   <div class="container py-5">
+   <div class="container pt-5 pb-4">
       <form class="p-4 needs-validation mx-auto" novalidate>
          <div class="wrapper-img mx-auto mb-4">
             <img src="./assets/logo.png" class="img-fluid" alt="Logo da OBC">
@@ -105,6 +105,9 @@
       </form>
    </div>
    
+   <div class="container text-center pb-2">
+      <p>Feito por Anderson Almeida  &copy; OneBitCode todos os diretiros reservados - 2023</p>
+   </div>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
